Fix conflict with custom class name invisible.

--- a/css/styles.less
+++ b/css/styles.less
@@ -43,7 +43,7 @@ header {
     margin-top: 20px;
 }
 
-.invisible {
+.hidden-simple {
     display: none;
 }
 
